<resources>
    <string name="app_name">HNLovac</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="live">UŽIVO</string>
    <string name="fixtures">REZULTATI</string>
    <string name="standings">TABLICA</string>
    <string name="signin">REGISTRACIJA</string>
    <string name="nav_login">PRIJAVA</string>
    <string name="nav_profile">PROFIL</string>
    <string name="nav_home">UŽIVO</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="welcome">Dobrodošli!</string>
    <string name="login_acc">Prijavite se u vaš račun</string>
    <string name="reg_acc">Registrirajte novi račun</string>
    <string name="firstname_acc">Unesite ime</string>
    <string name="lastname_acc">Unesite prezime</string>
    <string name="email_acc">Unesite vaš email</string>
    <string name="password_acc">Unesite vašu zaporku</string>
    <string name="register_acc">Nemate korisnički račun? Registrirajte se!</string>
    <string name="alreadyHave_acc">Već imate korisnički račun? Logirajte se ovdje!</string>
    <string name="logged_in">Uspješno ste autentificirani kao:</string>
    <string name="logout">ODJAVA</string>
    <string name="forgot_pass">Zaboravili ste lozinku?</string>
    <string name="hnlovac">HNLovac</string>
    <string name="activity">AKTIVNOST</string>
    <string name="submit">PODNESI</string>
    <string name="oporavak">Ispod unesite email adresu za oporovak</string>
    <string name="options">OPCIJE</string>
    <string name="najbolji_strijelci">STRIJELCI</string>
    <string name="golovi">Golovi</string>
    <string name="nastupi">Nastupi</string>
    <string name="hnk_hajduk">HNK Hajduk</string>
    <string name="marko_livaja">Marko Livaja</string>
    <string name="gnk_dinamo_zagreb">GNK Dinamo Zagreb</string>
    <string name="dinamo">Dinamo</string>
    <string name="odaberi_klub">ODABERI KLUB</string>
    <string name="odaberite_omiljeni_tim">Odaberite omiljeni tim</string>
    <string name="odaberite_omiljeni_klub">Odaberite omiljeni klub</string>
    <string name="upi_ite_najbolju_postavu_sezone">Upišite najbolju postavu sezone za klub</string>
    <string name="driblinzi">Driblinzi</string>
    <string name="ocjena">Ocjena</string>
    <string name="statistika_igrača">STATISTIKA IGRAČA</string>
    <string name="raspored">HNL VIJESTI</string>
    <string name="udarci">Udarci</string>
    <string name="proma_eni_ziceri">Promašeni ziceri</string>
    <string name="realizirani_ziceri">Realizirani ziceri</string>
    <string name="unesite_va_nadimak">Unesite vaš nadimak</string>
    <string name="potvrdite_va_u_zaporku">Potvrdite vašu zaporku</string>
    <string name="registracija">REGISTRACIJA</string>
    <string name="prijava">Prijava</string>
    <string name="verificiraj">verificiraj</string>
    <string name="niste_dobili_kod_ponovno_po_alji">Niste dobili kod? Ponovno pošalji.</string>
    <string name="molimo_unesite_verifikacijski_kod_poslan_na_va_u_e_mail_adresu">Molimo unesite verifikacijski kod poslan na vašu e-mail adresu</string>
    <string name="nazad_na_prijavu">Nazad na prijavu</string>
    <string name="broj_mobitela">BROJ MOBITELA</string>
    <string name="google_prijava">GOOGLE PRIJAVA</string>
    <string name="trenutno_nema_prijenosa_u_ivo">Trenutno nema utakmica uživo!</string>
    <string name="nadolaze_e_utakmice">Nadolazeće utakmice:</string>
    <string name="nadolaze_a_kola">RASPORED</string>
    <string name="unesite_broj_kola_datum_klub_itd">Unesite broj kola, datum, klub, itd.</string>
    <string name="chat">CHAT</string>

    <string-array name="rounds">
        <item>Kolo 1</item>
        <item>Kolo 2</item>
        <item>Kolo 3</item>
        <item>Kolo 4</item>
        <item>Kolo 5</item>
        <item>Kolo 6</item>
        <item>Kolo 7</item>
        <item>Kolo 8</item>
        <item>Kolo 9</item>
        <item>Kolo 10</item>
        <item>Kolo 11</item>
        <item>Kolo 12</item>
        <item>Kolo 13</item>
        <item>Kolo 14</item>
        <item>Kolo 15</item>
        <item>Kolo 16</item>
        <item>Kolo 17</item>
        <item>Kolo 18</item>
        <item>Kolo 19</item>
        <item>Kolo 20</item>
        <item>Kolo 21</item>
        <item>Kolo 22</item>
        <item>Kolo 23</item>
        <item>Kolo 24</item>
        <item>Kolo 25</item>
        <item>Kolo 26</item>
        <item>Kolo 27</item>
        <item>Kolo 28</item>
        <item>Kolo 29</item>
        <item>Kolo 30</item>
        <item>Kolo 31</item>
        <item>Kolo 32</item>
        <item>Kolo 33</item>
        <item>Kolo 34</item>
        <item>Kolo 35</item>
        <item>Kolo 36</item>
    </string-array>

    <string-array name="schedule">
        <item>Kolo 4-9</item>
        <item>Kolo 10-15</item>
        <item>Kolo 16-21</item>
        <item>Kolo 22-27</item>
        <item>Kolo 28-33</item>
        <item>Kolo 34-36</item>
    </string-array>

</resources>