<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LogInFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_acc"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/firstnameTil"
            >


            <EditText
                android:id="@+id/et_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/unesite_va_nadimak"
                android:textColorHint="@android:color/black"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"
                android:layout_marginTop="100dp"
                android:layout_gravity="center_horizontal"
                />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailTil"
            >


            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email_acc"
                android:textColorHint="@android:color/black"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"
                android:layout_marginTop="170dp"
                android:layout_gravity="center_horizontal"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailPass"
            >

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_acc"
                android:textColorHint="@android:color/black"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:layout_marginTop="240dp"
                android:layout_gravity="center_horizontal"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailPassConfirm"
            >

            <EditText
                android:id="@+id/et_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/potvrdite_va_u_zaporku"
                android:textColorHint="@android:color/black"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:layout_marginTop="310dp"
                android:layout_gravity="center_horizontal"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/alreadyHave_acc"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="400dp"
            android:layout_gravity="center_horizontal"
            />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/button"
            android:text="@string/registracija"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="430dp"
            android:layout_gravity="center_horizontal"
            />

    </androidx.cardview.widget.CardView>

</LinearLayout>